# india-quant-fund

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Dockerfile  README.md  SYSTEM_CONTEXT.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt  start.sh  vercel.json
.github/workflows/: backfill_results.yml  breakout_monitor.yml  ci.yml  daily_report.yml  keep-alive.yml  market_realtime.yml  monthly_report.yml  multibagger_alert.yml  paper_trading.yml  results_pipeline.yml  screener_biweekly.yml  screener_scan.yml  universe_agent.yml
agents/: base.py  director.py  execution.py  monitoring.py  reporting.py  research.py  signal.py
agents/prompts/: director.md  monitoring.md  reporting.md  risk.md
api/: _config.py  cloud_main.py  full_universe.py  index.py  main.py  universe.py
api/fii_dii_data/: agent_runs.json  agent_state.json  cron_heartbeat.json  fetch-log.json  history.json  (+3 more)
backtest/: runner.py
config/: risk_limits.yaml  settings.yaml  strategies.yaml
core/: __init__.py  config.py  market_data.py
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vercel.json  vite.config.ts
data/: live_positions.json
execution/: oms.py  reconciliation.py  router.py  slippage.py
infra/: schedules.yaml
infrastructure/: Dockerfile  Dockerfile.dashboard  docker-compose.yml  nginx.conf  redis.conf
monitoring/: alerts.py  audit.py  pnl_tracker.py
orchestration/: scheduler.py
risk/: drawdown.py  kill_switch.py  limits.py  liquidity.py  manager.py  position_sizer.py
scripts/: auto_trader.py  backfill.py  backfill_results.py  bootstrap.sh  breakout_monitor.py  bse_scraper.py  daily_report.py  earnings_listener.py  fix_rls_and_seed.sql  import_my_trades.py  market_realtime_poller.py  monthly_report.py  multibagger_alert.py  neo_poller.py  paper_trader.py  results_pipeline.py  run_screener.py  screener_refresh.py  screener_scraper.py  seed_demo_data.py  seed_paper_trades.py  seed_screener_cache.py  seed_screener_cache.sql  seed_universe_watchlist.py  setup_telegram_webhook.py  si_realtime_poller.py  si_universe_seed.py  strategy_agent.py  universe_agent.py  update_fii_dii.py  validate_setup.py
strategies/: base.py
tests/: conftest.py
(+153 files in other folders)
