[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "india-quant-fund"
version = "1.0.0"
description = "Production-grade automated hedge fund for Indian equity markets"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Data
    "yfinance>=0.2.38",
    "nsepython>=0.0.26",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    # Portfolio optimization
    "PyPortfolioOpt>=1.5.5",
    # Brokers
    "dhanhq>=2.0.0",
    "NorenRestApiPy>=0.0.24",
    "pyotp>=2.9.0",
    # AI / LLM
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.28.0",
    # Agents / orchestration
    "redis>=5.0.0",
    "prefect>=3.0.0",
    # API / Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Reporting
    "jinja2>=3.1.4",
    "weasyprint>=62.0",
    "matplotlib>=3.8.0",
    "plotly>=5.22.0",
    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "schedule>=1.2.0",
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.0",
    "apscheduler>=3.10.0",
    "smtplib-ssl>=1.0.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
backtest = "backtest.runner:main"
validate = "scripts.validate_setup:main"
backfill = "scripts.backfill:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests that require live credentials",
    "slow: tests that take > 5 seconds",
]
addopts = "-v --tb=short"
